--- a/about.html
+++ b/about.html
@@ -1,17 +1,13 @@
 ---
 layout: about
-title: About
+title: 关于
 ---
 
-<h2>About</h2>
+<h2>关于</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+<br>:art:&nbsp; 公司：网易（杭州）
+<br>:art:&nbsp; 职位：资深服务器开发工程师
+<br>:art:&nbsp; 邮箱：nmgliuweiqiang@163.com
 </p>
 
-<p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
-</p>
